Add automatic module name

--- a/afs/afs-ws/afs-ws-client/pom.xml
+++ b/afs/afs-ws/afs-ws-client/pom.xml
@@ -21,6 +21,22 @@
     <name>AFS WS client</name>
     <description>AFS WS client</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.afs.ws.client</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
