--- a/entsoe-util/pom.xml
+++ b/entsoe-util/pom.xml
@@ -22,6 +22,22 @@
     <name>ENTSO-E utilities</name>
     <description>A set of utility classes to work with ENTSO-E files (UCTE-DEF, CIMv1, CGMES...)</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.entsoe.util</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
