--- a/security-analysis/security-analysis-afs-local/pom.xml
+++ b/security-analysis/security-analysis-afs-local/pom.xml
@@ -22,8 +22,23 @@
     <name>Security analysis local service</name>
     <description>Local implementation of security analysis service.</description>
 
-    <dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.security.afs.local</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+    <dependencies>
         <!-- Compile dependencies -->
         <dependency>
             <groupId>com.powsybl</groupId>
