--- a/afs/afs-mapdb-storage/pom.xml
+++ b/afs/afs-mapdb-storage/pom.xml
@@ -22,6 +22,22 @@
     <name>AFS MapDB storage implementation</name>
     <description>An AFS storage implementation based on MapDB</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.afs.mapdb.storage</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
