--- a/afs/afs-mapdb/pom.xml
+++ b/afs/afs-mapdb/pom.xml
@@ -22,6 +22,22 @@
     <name>AFS MapDB filesystem implementation</name>
     <description>An AFS filesystem implementation based on MapDB</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.afs.mapdb</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
