--- a/cim1/cim1-converter/pom.xml
+++ b/cim1/cim1-converter/pom.xml
@@ -22,6 +22,22 @@
     <name>CIM1 converter implementation</name>
     <description>A converter implementation for CIM ENTSO-E V1 networks</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.cim1.converter</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
