--- a/iidm/iidm-util/pom.xml
+++ b/iidm/iidm-util/pom.xml
@@ -19,10 +19,25 @@
         <version>2.2.0-SNAPSHOT</version>
     </parent>
 
-
     <artifactId>powsybl-iidm-util</artifactId>
     <name>IIDM utilities</name>
     <description>A set of utility classes over the IIDM API</description>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.iidm.util</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
       <!-- Compilation dependencies -->
