--- a/loadflow/loadflow-results-completion/pom.xml
+++ b/loadflow/loadflow-results-completion/pom.xml
@@ -22,6 +22,22 @@
     <name>Loadflow Results Completion</name>
     <description>A tool to complete load-flow results</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.loadflow.results.completion</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
