--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -325,39 +325,39 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-itools-packager-maven-plugin</artifactId>
-                <version>${project.version}</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package-zip</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <packageName>powsybl</packageName>
-                    <javaXmx>8G</javaXmx>
-                    <copyToBin>
-                        <files>
-                            <file>${project.basedir}/../build/bin/slave</file>
-                        </files>
-                    </copyToBin>
-                    <copyToLib>
-                        <files>
-                            <file>${project.basedir}/../build/lib/libmaster.so</file>
-                            <file>${project.basedir}/../build/lib/libmathjni.so</file>
-                        </files>
-                    </copyToLib>
-                    <copyToEtc>
-                        <files>
-                            <file>${project.basedir}/../iidm/iidm-xml-converter/src/main/resources/xsd/iidm.xsd</file>
-                        </files>
-                    </copyToEtc>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>com.powsybl</groupId>-->
+                <!--<artifactId>powsybl-itools-packager-maven-plugin</artifactId>-->
+                <!--<version>${project.version}</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>package-zip</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<packageName>powsybl</packageName>-->
+                    <!--<javaXmx>8G</javaXmx>-->
+                    <!--<copyToBin>-->
+                        <!--<files>-->
+                            <!--<file>${project.basedir}/../build/bin/slave</file>-->
+                        <!--</files>-->
+                    <!--</copyToBin>-->
+                    <!--<copyToLib>-->
+                        <!--<files>-->
+                            <!--<file>${project.basedir}/../build/lib/libmaster.so</file>-->
+                            <!--<file>${project.basedir}/../build/lib/libmathjni.so</file>-->
+                        <!--</files>-->
+                    <!--</copyToLib>-->
+                    <!--<copyToEtc>-->
+                        <!--<files>-->
+                            <!--<file>${project.basedir}/../iidm/iidm-xml-converter/src/main/resources/xsd/iidm.xsd</file>-->
+                        <!--</files>-->
+                    <!--</copyToEtc>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
