--- a/docs/samples/pom.xml
+++ b/docs/samples/pom.xml
@@ -110,6 +110,11 @@
                 <artifactId>powsybl-iidm-converter-api</artifactId>
                 <version>${powsybl.version}</version>
             </dependency>
+			 <dependency>
+				<groupId>com.powsybl</groupId>
+				<artifactId>powsybl-loadflow-api</artifactId>        	 
+				<version>${powsybl.version}</version>
+			</dependency>
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-iidm-impl</artifactId>
