--- a/triple-store/triple-store-test/pom.xml
+++ b/triple-store/triple-store-test/pom.xml
@@ -1,72 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2017, RTE (http://www.rte-france.com) This Source Code 
-    Form is subject to the terms of the Mozilla Public License, v. 2.0. If a 
-    copy of the MPL was not distributed with this file, You can obtain one at 
-    http://mozilla.org/MPL/2.0/. -->
+	Form is subject to the terms of the Mozilla Public License, v. 2.0. If a 
+	copy of the MPL was not distributed with this file, You can obtain one at 
+	http://mozilla.org/MPL/2.0/. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.powsybl</groupId>
-        <artifactId>powsybl-triple-store</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>com.powsybl</groupId>
+		<artifactId>powsybl-triple-store</artifactId>
+		<version>2.2.0-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>powsybl-triple-store-test</artifactId>
+	<artifactId>powsybl-triple-store-test</artifactId>
 
-    <name>Triple store implementations test</name>
-    <description>Test for triple store implementations</description>
+	<name>Triple store implementations test</name>
+	<description>Test for triple store implementations</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-commons</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.powsybl</groupId>
+			<artifactId>powsybl-commons</artifactId>
 			<version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-triple-store-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.powsybl</groupId>
+			<artifactId>powsybl-triple-store-api</artifactId>
 			<version>${project.version}</version>
-        </dependency>
-        
-        <!-- Known triple store engines -->
-        <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-triple-store-impl-blazegraph</artifactId>
+		</dependency>
+
+		<!-- Known triple store engines -->
+		<dependency>
+			<groupId>com.powsybl</groupId>
+			<artifactId>powsybl-triple-store-impl-blazegraph</artifactId>
 			<version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-triple-store-impl-jena</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.powsybl</groupId>
+			<artifactId>powsybl-triple-store-impl-jena</artifactId>
 			<version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-triple-store-impl-rdf4j</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.powsybl</groupId>
+			<artifactId>powsybl-triple-store-impl-rdf4j</artifactId>
 			<version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-         
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.jimfs</groupId>
-            <artifactId>jimfs</artifactId>
-            <scope>test</scope>
-        </dependency>
-		<!-- FIXME LUMA is this required ??? yes to avoid too much output from big.data
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>test</scope>
-        </dependency>
-		-->
-    </dependencies>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- This is required to use a log where we can configure log level for 
+			big.data package and avoid its verbose output -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
