--- a/iidm/pom.xml
+++ b/iidm/pom.xml
@@ -25,6 +25,7 @@
 
     <modules>
         <module>iidm-api</module>
+        <module>iidm-ext</module>
         <module>iidm-converter-api</module>
         <module>iidm-impl</module>
         <module>iidm-test</module>
