Create a fat jar to aggregate the powsybl-core javadoc

--- a/pom.xml
+++ b/pom.xml
@@ -472,6 +472,7 @@
                                 <phase>package</phase>
                                 <goals>
                                     <goal>jar</goal>
+                                    <goal>aggregate-jar</goal>
                                 </goals>
                             </execution>
                         </executions>
