increasing coverage test

--- a/triple-store/triple-store-api/pom.xml
+++ b/triple-store/triple-store-api/pom.xml
@@ -42,5 +42,10 @@
             <artifactId>powsybl-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
