--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <module>action</module>
         <module>afs</module>
         <module>ampl-converter</module>
-		<module>cgmes</module>
+        <module>cgmes</module>
         <module>cim-anonymiser</module>
         <module>cim1</module>
         <module>commons</module>
@@ -73,7 +73,7 @@
         <module>simulation-api</module>
         <module>time-series</module>
         <module>tools</module>
-		<module>triple-store</module>
+        <module>triple-store</module>
         <module>ucte</module>
     </modules>
 
@@ -121,6 +121,7 @@
         <arquillianbom.version>1.2.0.Final</arquillianbom.version>
         <assertj.version>3.11.0</assertj.version>
         <autoservice.version>1.0-rc2</autoservice.version>
+        <blazegraph.version>2.1.4</blazegraph.version>
         <commonscli.version>1.3.1</commonscli.version>
         <commonscompress.version>1.17</commonscompress.version>
         <commonsio.version>2.5</commonsio.version>
@@ -133,6 +134,7 @@
         <jackson.version>2.8.7</jackson.version>
         <jama.version>1.0.3</jama.version>
         <javaeeapi.version>7.0</javaeeapi.version>
+        <jena.version>3.0.0</jena.version>
         <jgrapht.version>1.0.1</jgrapht.version>
         <jimfs.version>1.1</jimfs.version>
         <jjwt.version>0.9.0</jjwt.version>
@@ -145,6 +147,7 @@
         <mockito.version>1.10.19</mockito.version>
         <poi.version>3.15</poi.version>
         <protobuf.version>2.5.0</protobuf.version>
+        <rdf4j.version>2.2.2</rdf4j.version>
         <resteasy.version>3.1.4.Final</resteasy.version>
         <shrinkwrap-resolver.version>2.2.6</shrinkwrap-resolver.version>
         <sirocco.version>1.0</sirocco.version>
