--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>tools</module>
         <module>triple-store</module>
         <module>ucte</module>
+        <module>dsl</module>
     </modules>
 
     <properties>
